[package]
name = "iroh-roq"
version = "0.1.0"
edition = "2021"
readme = "README.md"
description = "RTP over iroh"
license = "MIT OR Apache-2.0"
authors = ["n0 team"]
repository = "https://github.com/n0-computer/iroh-roq"


[dependencies]
anyhow = "1.0.102"
iroh = { version = "0.97", default-features = false }
iroh-quinn-proto = "0.15.1"
n0-future = "0.3.2"
rtp = "0.17.0"
tokio = { version = "1.52.0", features = ["sync"] }
tokio-util = "0.7.18"
tracing = "0.1.44"
webrtc-util = { version = "0.17.1", default-features = false, features = [
    "marshal",
] }

[dev-dependencies]
opus = "0.3.1"
